<resources>
    <string name="app_name">Delicious</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address">13.235.250.119</string>
    <string name="token">f656765accd5e8</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="add_to_cart_btn">Add</string>
    <string name="proceed_to_cart_btn">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="place_order">Place Order Rs.</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders :</string>
    <string name="question1">Q1. Why is Foodies doing this?</string>
    <string name="answer1">A1. At Foodies we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. Delicious Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question2">Q2. How are you guys different?</string>
    <string name="answer2">A2. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for Delicious Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find any Restaurant with that name!</string>
    <string name="no_orders_placed">No Orders Placed Yet</string>
    <string name="theFoodies">Foodies</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="sort">sort</string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="image">Image</string>
    <string name="applogo">appLogo</string>
    <string name="paneer_masala">Paneer Masala</string>
    <string name="rs_200">Rs.200</string>
    <string name="pind_tadka">Pind Tadka</string>
    <string name="_300_person">300/person</string>
    <string name="_4_5">4.5</string>
    <string name="user">user</string>
    <string name="username">UserName</string>
    <string name="_91_9999999999">+91 9999999999</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="confirm_pin_min_6">Confirm Pin (Min 6)</string>
    <string name="submit">Submit</string>
    <string name="new_pin_min_6">New Pin (Min 6)</string>
    <string name="otp_min_4">OTP (Min 4)</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="enter_your_number_10_digits">Enter your Number(10 digits)</string>
    <string name="pin">Pin</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="register">Register</string>
    <string name="pin_min_6">Pin(Min 6)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="name_min_3_characters">Name (Min 3 characters)</string>
    <string name="chicken_chilli">Chicken chilli</string>
    <string name="_22_01_2023">22/01/2023</string>
    <string name="_1">1</string>
    <string name="chicken_biryani">Chicken biryani</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="rating">Rating</string>


</resources>
