<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homee"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/favoriteRestaurants"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favorite_restaurants" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_back_arrow"
            android:title="@string/log_out" />
    </group>
</menu>