<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/BgColorBlue"
    tools:context=".fragment.FaqsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtFAQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/question1"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/txtFAQA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/answer1"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#909090" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dip"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewFAQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/question2"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/textViewFAQA2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/answer2"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    </LinearLayout>

</ScrollView>



